.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:22:21 **** Rebuild of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
gcc -o test.exe "src\\test.o" 
Info: Nothing to build for test
17:22:51 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
gcc -o test.exe "src\\test.o" 
17:23:48 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c: In function 'main':
..\src\test.c:54:12: warning: unknown conversion type character 'l' in format [-Wformat=]
   54 |  printf("%lld", limit);
      |            ^
..\src\test.c:54:9: warning: too many arguments for format [-Wformat-extra-args]
   54 |  printf("%lld", limit);
      |         ^~~~~~
..\src\test.c:54:12: warning: unknown conversion type character 'l' in format [-Wformat=]
   54 |  printf("%lld", limit);
      |            ^
..\src\test.c:54:9: warning: too many arguments for format [-Wformat-extra-args]
   54 |  printf("%lld", limit);
      |         ^~~~~~
..\src\test.c:57:2: error: unknown type name 'pthread_t'
   57 |  pthread_t tid;
      |  ^~~~~~~~~
..\src\test.c:57:12: warning: unused variable 'tid' [-Wunused-variable]
   57 |  pthread_t tid;
      |            ^~~
17:23:57 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c: In function 'main':
..\src\test.c:54:12: warning: unknown conversion type character 'l' in format [-Wformat=]
   54 |  printf("%lld", limit);
      |            ^
..\src\test.c:54:9: warning: too many arguments for format [-Wformat-extra-args]
   54 |  printf("%lld", limit);
      |         ^~~~~~
..\src\test.c:54:12: warning: unknown conversion type character 'l' in format [-Wformat=]
   54 |  printf("%lld", limit);
      |            ^
..\src\test.c:54:9: warning: too many arguments for format [-Wformat-extra-args]
   54 |  printf("%lld", limit);
      |         ^~~~~~
gcc -o test.exe "src\\test.o" 
17:24:24 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c: In function 'main':
..\src\test.c:54:11: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long long int' [-Wformat=]
   54 |  printf("%d", limit);
      |          ~^   ~~~~~
      |           |   |
      |           int long long int
      |          %I64d
..\src\test.c:54:11: warning: format '%d' expects argument of type 'int', but argument 2 has type 'long long int' [-Wformat=]
   54 |  printf("%d", limit);
      |          ~^   ~~~~~
      |           |   |
      |           int long long int
      |          %I64d
gcc -o test.exe "src\\test.o" 
17:24:39 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c: In function 'main':
..\src\test.c:54:12: warning: format '%ld' expects argument of type 'long int', but argument 2 has type 'long long int' [-Wformat=]
   54 |  printf("%ld", limit);
      |          ~~^   ~~~~~
      |            |   |
      |            |   long long int
      |            long int
      |          %I64d
..\src\test.c:54:12: warning: format '%ld' expects argument of type 'long int', but argument 2 has type 'long long int' [-Wformat=]
   54 |  printf("%ld", limit);
      |          ~~^   ~~~~~
      |            |   |
      |            |   long long int
      |            long int
      |          %I64d
gcc -o test.exe "src\\test.o" 
17:24:47 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\test.o" "..\\src\\test.c" 
gcc -o test.exe "src\\test.o" 
17:29:29 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c:30:10: fatal error: pthread.h: No such file or directory
   30 | #include <pthread.h>
      |          ^~~~~~~~~~~
compilation terminated.
17:29:37 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c: In function 'main':
..\src\test.c:58:2: error: unknown type name 'pthread_t'
   58 |  pthread_t tid;
      |  ^~~~~~~~~
..\src\test.c:58:12: warning: unused variable 'tid' [-Wunused-variable]
   58 |  pthread_t tid;
      |            ^~~
17:31:37 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c: In function 'main':
..\src\test.c:58:2: error: unknown type name 'pthread_t'
   58 |  pthread_t tid;
      |  ^~~~~~~~~
..\src\test.c:58:12: warning: unused variable 'tid' [-Wunused-variable]
   58 |  pthread_t tid;
      |            ^~~
17:31:46 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
gcc -L-pthread -o test.exe "src\\test.o" -l-pthread 
c:/mingw/bin/../lib/gcc/x86_64-w64-mingw32/10.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot find -l-pthread
collect2.exe: error: ld returned 1 exit status
17:31:54 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c:30:10: fatal error: pthread.h: No such file or directory
   30 | #include <pthread.h>
      |          ^~~~~~~~~~~
compilation terminated.
17:32:12 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
..\src\test.c:30:10: fatal error: pthread.h: No such file or directory
   30 | #include "pthread.h"
      |          ^~~~~~~~~~~
compilation terminated.
17:33:12 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\test.o" "..\\src\\test.c" 
gcc -L-pthread -o test.exe "src\\test.o" -l-pthread 
c:/mingw/bin/../lib/gcc/x86_64-w64-mingw32/10.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot find -l-pthread
collect2.exe: error: ld returned 1 exit status
17:34:32 **** Incremental Build of configuration Debug for project test ****
Info: Internal Builder is used for build
gcc -Lpthread -o test.exe "src\\test.o" -lpthread 
c:/mingw/bin/../lib/gcc/x86_64-w64-mingw32/10.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot find -lpthread
collect2.exe: error: ld returned 1 exit status
